fix some themes invisible video

--- a/src/blocks/video/style.scss
+++ b/src/blocks/video/style.scss
@@ -125,6 +125,9 @@
         video {
             width: 100%;
             height: 100%;
+
+            // fix for some themes.
+            visibility: visible;
         }
     }
     &.ghostkit-video-playing .ghostkit-video-frame {
